--- a/app.json
+++ b/app.json
@@ -13,13 +13,15 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ios.gather-v2"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.gather_v2"
     },
     "web": {
       "bundler": "metro",
@@ -27,7 +29,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "@stripe/stripe-react-native",
+      {
+        "merchantIdentifier": " ",
+        "enableGooglePay": true
+      }
     ],
     "experiments": {
       "typedRoutes": true
