--- a/app.json
+++ b/app.json
@@ -29,12 +29,13 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
-      "@stripe/stripe-react-native",
-      {
-        "merchantIdentifier": " ",
-        "enableGooglePay": true
-      }
+      ["expo-router"],
+      [
+        "expo-font",
+        {
+          "fonts": ["node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"]
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
