--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/restyle": "^2.4.4",
-    "@stripe/stripe-react-native": "^0.38.4",
+    "@stripe/stripe-react-native": "0.37.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
+    "expo-font": "^12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -31,25 +32,29 @@
     "expo-web-browser": "~13.0.3",
     "pocketbase": "^0.21.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.3.1",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
+    "react-native-svg": "^15.6.0",
+    "react-native-web": "^0.19.12",
+    "stripe": "^16.8.0",
     "twrnc": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3",
-    "react-native-onboarding-swiper": "^1.3.0"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
