--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@gorhom/bottom-sheet": "^4",
+    "@marceloterreiro/flash-calendar": "^1.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@shopify/flash-list": "^1.7.1",
+    "@shopify/react-native-performance": "^4.1.2",
     "@shopify/restyle": "^2.4.4",
-    "@stripe/stripe-react-native": "0.37.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "^12.0.9",
@@ -42,7 +45,6 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.6.0",
     "react-native-web": "^0.19.12",
-    "stripe": "^16.8.0",
     "twrnc": "^4.5.0"
   },
   "devDependencies": {
