--- a/app.json
+++ b/app.json
@@ -43,6 +43,12 @@
         {
           "fonts": ["node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"]
         }
+      ],
+      [
+        "@react-native-google-signin/google-signin",
+        {
+          "iosUrlScheme": "com.googleusercontent.apps.128786716214-6j1dv2adbcrfhjqa4p2r149eqgr7u5mp"
+        }
       ]
     ],
     "experiments": {
