--- a/package.json
+++ b/package.json
@@ -14,11 +14,20 @@
   "jest": {
     "preset": "jest-expo"
   },
+  "targets": [
+    {
+      "target_name": "binding",
+      "sources": [
+        "src/binding.cc"
+      ]
+    }
+  ],
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4",
     "@marceloterreiro/flash-calendar": "^1.0.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/flash-list": "1.6.4",
