--- a/package.json
+++ b/package.json
@@ -34,14 +34,17 @@
     "@shopify/react-native-performance": "^4.1.2",
     "@shopify/restyle": "^2.4.4",
     "expo": "~51.0.28",
+    "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "^13.0.2",
     "expo-font": "^12.0.9",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
+    "expo-updates": "^0.25.24",
+    "expo-web-browser": "^13.0.3",
     "phosphor-react-native": "^2.2.1",
     "pocketbase": "^0.21.4",
     "react": "18.2.0",
