--- a/app.json
+++ b/app.json
@@ -13,62 +13,70 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.ios.gather-v2"
+        "supportsTablet": false,
+        "bundleIdentifier": "com.ios.gather-v2",
+        "infoPlist": {
+        "CFBundleURLTypes": [
+            {
+                "CFBundleURLSchemes": ["com.googleusercontent.apps.128786716214-6j1dv2adbcrfhjqa4p2r149eqgr7u5mp"]
+            }
+        ]
+    }
+      
     },
     "iosStatusBar": {
-      "backgroundColor": "",
-      "translucent": true
+        "backgroundColor": "",
+        "translucent": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.anonymous.gather_v2"
+        "adaptiveIcon": {
+            "foregroundImage": "./assets/images/adaptive-icon.png",
+            "backgroundColor": "#ffffff"
+        },
+        "package": "com.anonymous.gather_v2"
     },
     "androidStatusBar": {
-      "backgroundColor": "",
-      "translucent": true
+        "backgroundColor": "",
+        "translucent": true
     },
     "web": {
-      "bundler": "metro",
-      "output": "static",
-      "favicon": "./assets/images/favicon.png"
+        "bundler": "metro",
+        "output": "static",
+        "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
+        [
+            "expo-router"
+        ],
+        [
+            "expo-font",
+            {
+                "fonts": [
+                    "node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"
+                ]
+            }
+        ],
       [
-        "expo-router"
-      ],
-      [
-        "expo-font",
-        {
-          "fonts": [
-            "node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"
-          ]
-        }
-      ],
-      [
-        "@react-native-google-signin/google-signin",
-        {
-          "iosUrlScheme": "com.googleusercontent.apps.128786716214-6j1dv2adbcrfhjqa4p2r149eqgr7u5mp"
-        }
+            "@react-native-google-signin/google-signin",
+            {
+                "iosUrlScheme": "com.googleusercontent.apps.128786716214-6j1dv2adbcrfhjqa4p2r149eqgr7u5mp"
+            }
       ]
     ],
     "experiments": {
-      "typedRoutes": true
+        "typedRoutes": true
     },
     "extra": {
-      "router": {
-        "origin": false
-      },
-      "eas": {
-        "projectId": "d8a58c08-5de6-431a-ae81-f1f5815d2f84"
-      }
+        "router": {
+            "origin": false
+        },
+        "eas": {
+            "projectId": "d8a58c08-5de6-431a-ae81-f1f5815d2f84"
+        }
     },
     "runtimeVersion": "1.0.0",
     "updates": {
-      "url": "https://u.expo.dev/d8a58c08-5de6-431a-ae81-f1f5815d2f84"
+        "url": "https://u.expo.dev/d8a58c08-5de6-431a-ae81-f1f5815d2f84"
     }
   }
 }
