--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4",
     "@marceloterreiro/flash-calendar": "^1.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -37,7 +38,7 @@
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
-    "expo-font": "^12.0.9",
+    "expo-font": "^12.0.10",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
@@ -50,6 +51,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-app-auth": "^8.0.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.10.1",
