--- a/app.json
+++ b/app.json
@@ -45,9 +45,7 @@
         "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-        [
-            "expo-router"
-        ],
+        ["expo-router"],
         [
             "expo-font",
             {
@@ -56,12 +54,26 @@
                 ]
             }
         ],
-      [
-            "@react-native-google-signin/google-signin",
+        [
+                "@react-native-google-signin/google-signin",
+                {
+                    "iosUrlScheme": "com.googleusercontent.apps.128786716214-6j1dv2adbcrfhjqa4p2r149eqgr7u5mp"
+                }
+        ],
+        [ 
+            "react-native-radar",
             {
-                "iosUrlScheme": "com.googleusercontent.apps.128786716214-6j1dv2adbcrfhjqa4p2r149eqgr7u5mp"
+                "iosFraud": true,
+                "iosNSLocationWhenInUseUsageDescription": "Your location permission prompt",
+                "iosNSLocationAlwaysAndWhenInUseUsageDescription": "Your location permission prompt",
+                "iosBackgroundMode": true,
+                "androidFraud": true,
+                "androidBackgroundPermission": true,
+                "androidFineLocationPermission": true,
+                "addRadarSDKMotion":true           
             }
-      ]
+      ],
+      ["@maplibre/maplibre-react-native"]
     ],
     "experiments": {
         "typedRoutes": true
