--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-performance": "^4.1.2",
     "@shopify/restyle": "^2.4.4",
-    "expo": "~51.0.31",
+    "expo": "^51.0.32",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
     "expo-crypto": "^13.0.2",
@@ -54,12 +54,14 @@
     "react-native-app-auth": "^8.0.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-radar": "^3.17.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "^0.19.12",
-    "twrnc": "^4.5.0"
+    "twrnc": "^4.5.0",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
