--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-performance": "^4.1.2",
     "@shopify/restyle": "^2.4.4",
+    "@stripe/stripe-react-native": "^0.38.6",
     "expo": "^51.0.32",
     "expo-auth-session": "^5.5.2",
     "expo-constants": "~16.0.2",
@@ -55,7 +56,7 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-radar": "^3.17.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
