--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   ],
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/poppins": "^0.2.3",
+    "@expo/metro-config": "^0.18.11",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4",
     "@marceloterreiro/flash-calendar": "^1.0.0",
@@ -59,7 +61,8 @@
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "^15.6.0",
+    "react-native-svg-transformer": "0.20.0",
     "react-native-web": "^0.19.12",
     "twrnc": "^4.5.0",
     "zustand": "^4.5.5"
@@ -74,7 +77,6 @@
     "eslint-config-expo": "^7.1.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
-    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
