--- a/package.json
+++ b/package.json
@@ -49,22 +49,26 @@
     "expo-system-ui": "~3.0.7",
     "expo-updates": "^0.25.24",
     "expo-web-browser": "^13.0.3",
+    "google-auth-library": "^9.14.1",
     "phosphor-react-native": "^2.2.1",
     "pocketbase": "^0.21.4",
+    "pocketbase-otp": "^0.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-app-auth": "^8.0.0",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-radar": "^3.17.0",
-    "react-native-reanimated": "^3.15.1",
+    "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.6.0",
+    "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "0.20.0",
     "react-native-web": "^0.19.12",
     "twrnc": "^4.5.0",
+    "upgrade": "^1.1.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
