--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-app-auth": "^8.0.0",
+    "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-magic-modal": "2.0.8",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-radar": "^3.17.0",
     "react-native-reanimated": "3.10.1",
@@ -70,6 +72,7 @@
     "react-native-svg-transformer": "0.20.0",
     "react-native-web": "^0.19.12",
     "solito": "^4.2.2",
+    "sonner-native": "^0.13.0",
     "twrnc": "^4.5.0",
     "upgrade": "^1.1.0",
     "zustand": "^4.5.5"
