--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-config": "^0.18.11",
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "^4",
+    "@line/ts-remove-unused": "^0.4.0",
     "@marceloterreiro/flash-calendar": "^1.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
@@ -36,11 +37,12 @@
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-performance": "^4.1.2",
     "@shopify/restyle": "^2.4.4",
-    "@stripe/stripe-react-native": "^0.38.6",
+    "@showtime-xyz/tab-view": "^0.2.1",
+    "@stripe/stripe-react-native": "0.37.2",
     "dripsy": "^4.3.5",
     "expo": "^51.0.32",
     "expo-auth-session": "^5.5.2",
-    "expo-constants": "~16.0.2",
+    "expo-constants": "^16.0.2",
     "expo-crypto": "^13.0.2",
     "expo-font": "^12.0.10",
     "expo-image": "^1.12.15",
@@ -64,10 +66,12 @@
     "react-native-gesture-handler": "~2.16.1",
     "react-native-magic-modal": "2.0.8",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-pager-view": "6.3.0",
     "react-native-radar": "^3.17.0",
-    "react-native-reanimated": "3.10.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-sticky-parallax-header": "^1.0.0-rc.9",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "0.20.0",
     "react-native-web": "^0.19.12",
