expanded settings tab & refactored file structure

--- a/pb/dockerfile
+++ b/pb/dockerfile
@@ -1,4 +1,5 @@
 # FIXME: configure base image to hold admin credentials using environment variables
+# FIXME: db on image has error w read & write requests (connection issue)
 
 FROM alpine:latest
 
@@ -17,7 +18,7 @@ COPY ./pb_migrations /pb/pb_migrations
 # COPY ./pb_hooks /pb/pb_hooks
 
 VOLUME /pb/pb_data
-EXPOSE 8090
+EXPOSE 8080
 
 # start PocketBase
-CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
+CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8080"]
