--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   ],
   "dependencies": {
+    "@expensify/react-native-live-markdown": "^0.1.157",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/metro-config": "^0.18.11",
@@ -42,15 +43,19 @@
     "dripsy": "^4.3.5",
     "expo": "^51.0.32",
     "expo-auth-session": "^5.5.2",
+    "expo-blur": "^13.0.2",
     "expo-constants": "^16.0.2",
     "expo-crypto": "^13.0.2",
+    "expo-dev-client": "^4.0.26",
     "expo-font": "^12.0.10",
-    "expo-image": "^1.12.15",
+    "expo-image": "^1.13.0",
+    "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
+    "expo-system-ui": "^3.0.7",
+    "expo-tracking-transparency": "^4.0.2",
     "expo-updates": "^0.25.24",
     "expo-web-browser": "^13.0.3",
     "google-auth-library": "^9.14.1",
@@ -63,7 +68,9 @@
     "react-native-app-auth": "^8.0.0",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-fbsdk-next": "^13.0.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-logs": "^5.1.0",
     "react-native-magic-modal": "2.0.8",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-pager-view": "6.3.0",
@@ -71,6 +78,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-skeleton-content": "^1.0.28",
     "react-native-sticky-parallax-header": "^1.0.0-rc.9",
     "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "0.20.0",
