--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@marceloterreiro/flash-calendar": "^1.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@shopify/flash-list": "1.6.4",
