--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     }
   ],
   "dependencies": {
+    "@codeherence/react-native-header": "^0.12.2",
     "@expensify/react-native-live-markdown": "^0.1.157",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
