--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@marceloterreiro/flash-calendar": "^1.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-native-vector-icons/fontello": "^0.0.1-alpha.29",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
