--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@shopify/flash-list": "1.6.4",
     "@shopify/react-native-performance": "^4.1.2",
     "@shopify/restyle": "^2.4.4",
-    "@showtime-xyz/tab-view": "^0.2.1",
     "@stripe/stripe-react-native": "0.37.2",
     "dripsy": "^4.3.5",
     "expo": "^51.0.32",
@@ -76,6 +75,7 @@
     "react-native-logs": "^5.1.0",
     "react-native-magic-modal": "2.0.8",
     "react-native-onboarding-swiper": "^1.3.0",
+    "react-native-page-indicator": "^2.4.0",
     "react-native-pager-view": "6.3.0",
     "react-native-radar": "^3.17.0",
     "react-native-reanimated": "~3.10.1",
