--- a/package.json
+++ b/package.json
@@ -70,8 +70,10 @@
     "react-native-app-auth": "^8.0.0",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-edge-to-edge": "^0.1.2",
     "react-native-fbsdk-next": "^13.0.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-logs": "^5.1.0",
     "react-native-magic-modal": "2.0.8",
     "react-native-onboarding-swiper": "^1.3.0",
