--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-vector-icons/fontello": "^0.0.1-alpha.29",
+    "@react-native/gradle-plugin": "^0.73.5",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
