--- a/pb/dockerfile
+++ b/pb/dockerfile
@@ -1,24 +1,19 @@
-# FIXME: configure base image to hold admin credentials using environment variables
-# FIXME: db on image has error w read & write requests (connection issue)
-
 FROM alpine:latest
 
-ARG PB_VERSION=0.18.1
+ARG PB_VERSION=0.22.22
 
 RUN apk add --no-cache \
     unzip \
     ca-certificates
 
-# download and unzip PocketBase
 ADD https://github.com/pocketbase/pocketbase/releases/download/v${PB_VERSION}/pocketbase_${PB_VERSION}_linux_amd64.zip /tmp/pb.zip
 RUN unzip /tmp/pb.zip -d /pb/
 
 COPY ./pb_migrations /pb/pb_migrations
 
+# pb hooks does not exist
 # COPY ./pb_hooks /pb/pb_hooks
 
-VOLUME /pb/pb_data
-EXPOSE 8080
+EXPOSE 8090
 
-# start PocketBase
-CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8080"]
+CMD ["/pb/pocketbase", "serve", "--http=0.0.0.0:8090"]
