--- a/app.json
+++ b/app.json
@@ -15,6 +15,9 @@
     "ios": {
         "supportsTablet": false,
         "bundleIdentifier": "com.ios.gather-v2",
+        "config": {
+            "usesNonExemptEncryption": false
+        },
         "infoPlist": {
         "CFBundleURLTypes": [{
             "CFBundleURLSchemes": ["com.googleusercontent.apps.128786716214-6j1dv2adbcrfhjqa4p2r149eqgr7u5mp"]
@@ -28,7 +31,7 @@
             "foregroundImage": "./assets/images/adaptive-icon.png",
             "backgroundColor": "#ffffff"
         },
-        "package": "com.anonymous.gather_v2",
+        "package": "com.anonymous.gather_v2"
     },
     "androidStatusBar": {
         "backgroundColor": "",
@@ -57,6 +60,7 @@
     },
     "plugins": [
         ["expo-router"],
+        ["expo-secure-store"],
         ["expo-font", {
                 "fonts": [
                     "node_modules/@expo-google-fonts/inter/Inter_900Black.ttf",
