--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "expo-updates": "^0.25.24",
     "expo-web-browser": "^13.0.3",
     "google-auth-library": "^9.14.1",
+    "nativewind": "^4.1.21",
     "phosphor-react-native": "^2.2.1",
     "pocketbase": "^0.21.4",
     "pocketbase-otp": "^0.1.0",
@@ -92,6 +93,7 @@
     "react-native-web": "^0.19.12",
     "solito": "^4.2.2",
     "sonner-native": "^0.13.0",
+    "tailwindcss": "^3.4.14",
     "twrnc": "^4.5.0",
     "upgrade": "^1.1.0",
     "zustand": "^4.5.5"
