--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@expo/metro-config": "^0.18.11",
     "@expo/vector-icons": "^14.0.3",
     "@gorhom/bottom-sheet": "^4",
+    "@gorhom/sticky-item": "^2.1.1",
     "@line/ts-remove-unused": "^0.4.0",
     "@marceloterreiro/flash-calendar": "^1.0.0",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -84,6 +85,7 @@
     "react-native-pager-view": "6.3.0",
     "react-native-radar": "^3.17.0",
     "react-native-reanimated": "~3.10.1",
+    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-skeleton-content": "^1.0.28",
