--- a/app.json
+++ b/app.json
@@ -70,6 +70,9 @@
                 ]
             }
         ],
+        ["expo-camera", {
+                "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera"
+        }],
         ["@react-native-google-signin/google-signin", {
                 "iosUrlScheme": "com.googleusercontent.apps.128786716214-6j1dv2adbcrfhjqa4p2r149eqgr7u5mp"
             }
