--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-native-vector-icons/fontello": "^0.0.1-alpha.29",
-    "@react-native/gradle-plugin": "^0.73.5",
+    "@react-native/gradle-plugin": "^0.76.1",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -48,6 +48,7 @@
     "expo": "^51.0.32",
     "expo-auth-session": "^5.5.2",
     "expo-blur": "^13.0.2",
+    "expo-camera": "^15.0.16",
     "expo-constants": "^16.0.2",
     "expo-crypto": "^13.0.2",
     "expo-dev-client": "^4.0.26",
