--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image": "~2.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.9",
     "expo-splash-screen": "~0.29.13",
@@ -33,6 +34,7 @@
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "nativewind": "^4.1.23",
+    "phosphor-react-native": "^2.2.1",
     "pocketbase": "^0.22.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -45,7 +47,7 @@
     "react-native-screens": "~4.1.0",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.2",
+    "react-native-webview": "13.12.5",
     "sonner-native": "^0.16.1",
     "tailwindcss": "^3.4.16",
     "zustand": "^5.0.1"
